--- a/style.css
+++ b/style.css
@@ -106,24 +106,48 @@
 
 }
 
-.header .bottom{
+.header .bottom, .header .top{
     grid-template-columns: 6fr 4fr;
   
 }
 
+.handle{
+    grid-template-columns: repeat(7, 1fr);
+    gap: 20px;
+}
 
+.handle div{
+    /* grid-column: 3/7; */
+    align-self: center;
+}
+.handle img{
+
+    /* grid-column: 2; */
+    /* justify-self: center; */
+    /* margin-right: 20px; */
+}
 .search-section input{
     padding: 2px;
-    background-color: grey;
+    background-color: rgb(224, 217, 217);
     border-radius: 15px;
+    height: 35px;
 
 }
 
-.search-section{
+.search-section, .handle{
     grid-template-columns: 1fr 10fr;
     outline: 2px solid black;
-    margin-right: 120px;
+    /* margin-right: 120px; */
+    margin-left: 50px;
     
+}
+
+.additional{
+    margin-left: 160px;
+    gap: 30px;
+}
+.additional p{
+    align-self: center;
 }
 
 .top .additional,.bottom .handle, .bottom .buttons{
@@ -134,17 +158,21 @@
     display: grid;
     grid-auto-flow: column;
     gap: 15px;
+    justify-content: end;
 }
 
 .buttons button{
     background-color: var(--blue-color);
-    border-radius: 15px;
+    border-radius: 25px;
     color: white;
-    width: 80%;
+    /* width: 80%; */
     padding: 0;
     margin: 0;
     font-weight: 600;
     border: 0px;
+
+    height: 40px;
+    width: 105px;
 
 }
 
@@ -193,17 +221,25 @@
 
 .account{
     display: grid;
-    grid-auto-flow: column;
+    /* grid-auto-flow: column; */
+    grid-template-columns: 50px 1fr;
     padding: 15px;
+    gap: 16px;
 }
 
-.account img{
+img{
     height: 50px;
     width: 50px;
     /* margin: 30px; */
     border-radius: 60px;
+    
 }
 
+.account p{
+    outline: 1px solid red;
+}
 .account-info{
     align-self: center;
+    justify-self: end;
+    grid-column-start: 2;
 }
