--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 :root{
-    --blue-color: rgb(20, 154, 207)
+    --blue-color: rgb(20, 154, 207);
+    --grey-color: rgb(224, 217, 217);
 }
+
+
+* {
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 330;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+  }
 
 *{
     box-sizing: border-box;
@@ -8,6 +18,9 @@
     padding: 0;
 }
 
+a{
+    text-decoration: none;
+}
 
 .dashboard{
     display: grid;
@@ -24,6 +37,11 @@
 
 .sidebar * {
     color: white;
+    font-weight: 500;
+}
+
+.sidebar a{
+    margin-bottom: 15px;
 }
 
 .sidebar .grid-container{
@@ -61,7 +79,7 @@
 .main-logo .icon{
     display: grid;
     grid-template-columns: 1fr 1fr;   
-    width: 30%;
+    width: 35%;
     /* outline: 2px solid green; */
 }
 
@@ -128,7 +146,7 @@
 }
 .search-section input{
     padding: 2px;
-    background-color: rgb(224, 217, 217);
+    background-color: var(--grey-color);
     border-radius: 15px;
     height: 35px;
 
@@ -182,7 +200,7 @@
 .main-content{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    background-color: grey;
+    background-color: var(--grey-color);
     align-content: space-between;
 
 }
