--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 :root{
     --blue-color: rgb(20, 154, 207);
     --grey-color: rgb(224, 217, 217);
+    --iconify-size: 48px;
+    
 }
+
 
 
 * {
@@ -22,9 +25,13 @@ a{
     text-decoration: none;
 }
 
+a, a:visited{
+    color: red;
+}
+
 .dashboard{
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1.2fr 5fr;
     grid-template-rows: 1fr 5fr;
 }
 
@@ -38,10 +45,19 @@ a{
 .sidebar * {
     color: white;
     font-weight: 500;
+    font-size: 17px;
+}
+
+.sidebar .iconify {
+    font-size: calc(0.4*var(--iconify-size));
 }
 
 .sidebar a{
     margin-bottom: 15px;
+}
+
+.sidebar .main-logo p{
+    font-size: 20px;
 }
 
 .sidebar .grid-container{
@@ -67,6 +83,9 @@ a{
     justify-content: start;
     /* gap: 8px; */
 }
+.services a *, .meta a *{
+    align-self: center;
+}
 
 .sidebar .icon {
     justify-self: center;
@@ -85,7 +104,7 @@ a{
 
 .main-logo .icon, .left, .right{
     height: 100%;
-    gap: 2px;
+    gap: 3px;
 }
 .left{
     display: grid;
@@ -107,7 +126,8 @@ a{
 .header{
     display: grid;
     align-content: space-around;
-    padding: 15px;
+    padding: 0 18px;
+
     background-color: white;
 }
 
@@ -124,6 +144,10 @@ a{
 
 }
 
+.search-section{
+    /* height: 45px; */
+}
+
 .header .bottom, .header .top{
     grid-template-columns: 6fr 4fr;
   
@@ -134,7 +158,7 @@ a{
     gap: 20px;
 }
 
-.handle div{
+.handle > *{
     /* grid-column: 3/7; */
     align-self: center;
 }
@@ -143,33 +167,82 @@ a{
     /* grid-column: 2; */
     /* justify-self: center; */
     /* margin-right: 20px; */
+    height: 60px;
+    width: 60px;
 }
+
+.handle p, .additional p{
+    font-size: 20px;
+    font-weight: 800;
+}
+.handle p.small{
+    font-size: 10px;
+    margin-bottom: 4px;
+    font-weight: 800;
+}
+
+.additional p{
+    font-size: 15px;
+}
+
+
+
 .search-section input{
-    padding: 2px;
+    padding: 4px;
+    padding-left: 8px;
     background-color: var(--grey-color);
     border-radius: 15px;
-    height: 35px;
+    height: 100%;
+    font-size: 18px;
+    height: 80%;
+    align-self: center;
 
+    /* outline: 2px solid black; */
+    margin-left: -15px;
+    
+}
+
+.header .iconify{
+    font-size: calc(0.4 * var(--iconify-size));
+}
+
+.top .icon{
+    align-self: center;
+}
+
+.top > *{
+    /* height: 80%; */
 }
 
 .search-section, .handle{
     grid-template-columns: 1fr 10fr;
-    outline: 2px solid black;
+    /* outline: 2px solid black; */
     /* margin-right: 120px; */
     margin-left: 50px;
     
 }
 
 .additional{
-    margin-left: 160px;
-    gap: 30px;
+    margin-left: 120px;
+    gap: 5px;
+    padding-right: 15px;
+    /* padding-bottom: 5px; */
 }
-.additional p{
+
+.additional img{
+    height: 40px;
+    width: 40px;
+
+    /* height: 30px;
+    width: 30px; */
+}
+.additional *{
     align-self: center;
+    /* outline: 2px solid black; */
 }
 
 .top .additional,.bottom .handle, .bottom .buttons{
-    outline: 2px solid black;
+    /* outline: 2px solid black; */
 }
 
 .buttons{
@@ -191,6 +264,7 @@ a{
 
     height: 40px;
     width: 105px;
+    align-self: center;
 
 }
 
