--- a/style.css
+++ b/style.css
@@ -281,16 +281,20 @@ a, a:visited{
 
 }
 .projects-section, .announcements-section, .trending-section{
-    grid-column: 1/5;
     display: grid;
     grid-template-rows: 40px 1fr;
     padding: 8px;
     
 }
+.announcements-section, .trending-section{
+    grid-column: 5/7;
+}
 
 .projects-section{
     margin-left: 10px;
     /* height: 80%; */
+    grid-column: 1/5;
+
 }
 
 .project-card{
@@ -311,7 +315,7 @@ p.section-name{
 }
 
 
-.announcements{
+.announcements, .trending-accounts, .account, .trending-section{
     border-radius: 8px;
 
 }
@@ -379,7 +383,7 @@ p.three-icons *{
 }
 .project-card, 
 .announcements, 
-.trending-section .account{
+.trending-accounts{
     /* outline: 2px solid black; */
     background-color: white;
 }
@@ -388,17 +392,29 @@ p.three-icons *{
     grid-column: -3/-1;
     /* max-width: 80%; */
     /* margin: 0 20px; */
-    outline: 2px solid black;
+    /* outline: 2px solid black; */
+    padding-left: 5px;
 }
 
 
 .account{
     display: grid;
     /* grid-auto-flow: column; */
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 10px 1fr;
     padding: 15px;
-    gap: 16px;
+    /* gap: 16px; */
+    justify-content: center;
+    max-width: 80%;
+    padding-left: 30px;
 }
+
+label{
+    align-self: center;
+}
+.icon, .account, button, a{
+    cursor: pointer;
+}
+
 
 img{
     height: 50px;
@@ -408,10 +424,15 @@ img{
     
 }
 
-.account p{
-    outline: 1px solid red;
+.account img{
+    height: 50px;
+    width: 50px;
+    /* outline: 2px solid black; */
 }
+
 .account-info{
+    /* outline: 2px solid red; */
+
     align-self: center;
     justify-self: end;
     grid-column-start: 2;
